src/app/room/gptchat-room/ai-chat/ai-chat.component.scss
* {
  box-sizing: border-box;
}

.container {
  width: 100%;
  height: 100%;

  overflow: hidden;

  display: grid;
  grid-template-rows: 1fr auto;
  justify-items: center;
}

.outer-container {
  width: 50%;
  height: 100%;

  overflow: hidden;

  display: grid;
  align-items: center;
}

.inner-container {
  display: flex;
  gap: 1rem;
  flex-direction: column;
}

.ai-chat-container {
  width: 100%;
  height: 100%;
  overflow: hidden;

  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr auto;
}

.title-container {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1rem;

  .title {
    font-size: 1rem;
    font-weight: bold;
  }

  .title-icon {
    color: var(--md-sys-color-primary);
  }
}

textarea {
  width: 100%;
  background-color: transparent;
  color: var(--md-sys-color-on-background);

  border: none;
  outline: none;
  resize: none;
  overflow: hidden;
}

.input-container {
  position: relative;
  width: 100%;

  background-color: transparent;
  border: 1px solid var(--md-sys-color-surface3);
  border-radius: 8px;
  padding: 24px;

  .actions {
    display: flex;
    justify-content: space-between;
  }
}

.left-buttons button {
  color: var(--md-sys-color-on-background);
  border: 1px solid var(--md-sys-color-surface3);
}

.send-button {
  color: var(--md-sys-color-on-primary);
  background-color: var(--md-sys-color-primary);
}

.topics {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  width: 100%;
  height: 100%;
  gap: 1rem;

  .topic {
    display: grid;
    grid-template-columns: auto 1fr;

    border: 1px solid var(--md-sys-color-surface3);
    border-radius: 8px;
    height: auto;
    padding: 8px;

    .emoji {
      width: auto;
      height: auto;

      padding: 8px;
      background-color: var(--md-sys-color-surface3);
      border-radius: 8px;
    }

    .question {
      text-align: left;
    }
  }
}

.messages-container {
  overflow: scroll;
  padding: 24px;
  padding-bottom: 0;
  margin: 0 auto;

  width: 100%;
  height: 100%;

  display: flex;
  flex-direction: column;
  gap: 10px;

  .message {
    display: flex;
    align-items: flex-start;

    padding: 10px;
    border-radius: 8px;
    max-width: 60%;

    &.user-message {
      flex-direction: column;
      align-items: flex-end;
      background-color: var(--md-sys-color-surface3);
      color: var(--md-sys-color-on-surface3);
      margin-left: auto;
    }

    &.ai-message {
      background-color: transparent;
      margin-right: auto;
      max-width: 100%;
    }
  }

  .message-content {
    display: flex;
    align-items: flex-start;
    justify-content: flex-end;
  }

  .text-content {
    margin: 0 10px;
  }

  .message-icon {
    display: flex;
    align-items: center;
    justify-content: center;

    position: relative;
    z-index: 10;
    padding: 8px;
    color: var(--md-sys-color-primary);

    &::before {
      content: "";
      display: block;
      background-color: var(--md-sys-color-surface3);
      border: 1px solid var(--md-sys-color-primary);
      border-radius: 100%;
      width: 100%;
      height: 100%;
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      z-index: -1;
    }

    &.user-icon::before {
      border: none;
      background-color: var(--md-sys-color-background);
    }
  }

  .user-icon {
    margin-left: 10px;
  }

  .ai-icon {
    margin-right: 10px;
  }
}

.input-container-compact {
  width: 100%;

  margin: 14px auto;
  margin-bottom: 0;
  padding: 8px;
  display: flex;
  align-items: center;
  border-radius: 24px;

  border: 1px solid var(--md-sys-color-surface3);
}

.textarea-wrapper {
  flex: 1;
}

.attachments {
  display: flex;
  flex-wrap: wrap;
  gap: 8px;
  margin-top: 10px;

  border-radius: 8px;
  background-color: var(--md-sys-color-background);
  justify-content: flex-start;
  padding: 14px;
  width: 100%;
}

.file-box {
  display: flex;
  align-items: center;
  padding: 8px 12px;
  border: 1px solid var(--md-sys-color-surface3);
  border-radius: 5px;
  font-size: 14px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 30%;
}

.file-icon {
  margin-right: 8px;
  color: var(--md-sys-color-primary);
  flex-shrink: 0;
}

.file-name {
  color: var(--md-sys-color-on-surface3);
  overflow: hidden;
  text-overflow: ellipsis;
  flex-grow: 1;
}

@media (max-width: 768px) {
  .outer-container {
    width: 100%;
    padding: 8px;
  }

  .topics {
    grid-template-columns: 1fr;
  }

  .messages-container {
    padding: 0;
  }

  .input-container-compact {
    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: 1fr auto;
    padding: 14px;

    .textarea-wrapper {
      grid-column: 1 / 3;
      grid-row: 1;
      padding: 8px;
    }

    .left-buttons {
      grid-column: 1;
      grid-row: 2;
    }

    .right-buttons {
      grid-column: 2;
      grid-row: 2;

      justify-self: end;
    }
  }
}

